--- a/main.html
+++ b/main.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/nulstyle.css">
-    <link rel="stylesheet" href="./css/slick.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="nulstyle.css">
+    <link rel="stylesheet" href="slick.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bad+Script&family=Great+Vibes&family=Pattaya&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
             <div class="header_burgerMenu">
                 <span class="header_burgerMenu_line"></span>
             </div>
-            <img class="logo" src="./image/logo.png" alt="logo">
+            <img class="logo" src="image/logo.png" alt="logo">
             <div class="basket">
                 <svg 
                     width="40" 
@@ -41,7 +41,7 @@
             <div class="main_video">
                 <video autoplay loop muted playsinline 
                     style="width: 100%; max-width: 1000px; height: auto; pointer-events: none;">
-                    <source src="./image/video_main.mp4" type="video/mp4">
+                    <source src="image/video_main.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="main_box">
@@ -49,37 +49,37 @@
             </div>
             <div class="slider">
                 <div class="slider_boxik">
-                    <img src="./image/slider.jpg" alt="">
+                    <img src="image/slider.jpg" alt="">
                     <nav class="slider_boxik_artikul">Артикул:43001</nav>
                     <p class="slider_boxik_name">Куртка демисезон із екошкіри коричнева</p>
                     <h2 class="slider_boxik_price">1 199 грн</h2>
                 </div>
                 <div class="slider_boxik">
-                    <img src="./image/slider.jpg" alt="">
+                    <img src="image/slider.jpg" alt="">
                     <nav class="slider_boxik_artikul">Артикул:43001</nav>
                     <p class="slider_boxik_name">Куртка демисезон із екошкіри коричнева</p>
                     <h2 class="slider_boxik_price">1 199 грн</h2>
                 </div>
                 <div class="slider_boxik">
-                    <img src="./image/slider.jpg" alt="">
+                    <img src="image/slider.jpg" alt="">
                     <nav class="slider_boxik_artikul">Артикул:43001</nav>
                     <p class="slider_boxik_name">Куртка демисезон із екошкіри коричнева</p>
                     <h2 class="slider_boxik_price">1 199 грн</h2>
                 </div>
                 <div class="slider_boxik">
-                    <img src="./image/slider.jpg" alt="">
+                    <img src="image/slider.jpg" alt="">
                     <nav class="slider_boxik_artikul">Артикул:43001</nav>
                     <p class="slider_boxik_name">Куртка демисезон із екошкіри коричнева</p>
                     <h2 class="slider_boxik_price">1 199 грн</h2>
                 </div>
                 <div class="slider_boxik">
-                    <img src="./image/slider.jpg" alt="">
+                    <img src="image/slider.jpg" alt="">
                     <nav class="slider_boxik_artikul">Артикул:43001</nav>
                     <p class="slider_boxik_name">Куртка демисезон із екошкіри коричнева</p>
                     <h2 class="slider_boxik_price">1 199 грн</h2>
                 </div>
                 <div class="slider_boxik">
-                    <img src="./image/slider.jpg" alt="">
+                    <img src="image/slider.jpg" alt="">
                     <nav class="slider_boxik_artikul">Артикул:43001</nav>
                     <p class="slider_boxik_name">Куртка демисезон із екошкіри коричнева</p>
                     <h2 class="slider_boxik_price">1 199 грн</h2>
@@ -88,7 +88,7 @@
         </main>
         <footer>
             <div class="footer_logo">
-                <img src="./image/logo.png" alt="logo">
+                <img src="image/logo.png" alt="logo">
                 <p class="footer_logo_text">© 2022—2025</p>
                 <p class="footer_logo_text">RAFTEL. Всі права захищені</p>
             </div>
@@ -102,13 +102,13 @@
             <div class="footer_contacts">
                 <h1>Контактна інформація</h1>
                 <nav class="footer_contacts_viber">
-                    <img src="./image/viber.png" alt="">
+                    <img src="image/viber.png" alt="">
                     <a href="viber://chat?number=+380506853718"><p>0506853718</p></a>
                 </nav>
                 <a href=""><p class="footer_contacts_gmail">raftelstor@gmail.com</p></a>
                 <p>Наші соцмережі</p>
                 <a href="">
-                    <img class="footer_contacts_facebook" src="./image/facebook.png" alt="">
+                    <img class="footer_contacts_facebook" src="image/facebook.png" alt="">
                 </a>
             </div>
             <div class="footer_maps">
@@ -121,8 +121,7 @@
     </div>
 </body>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="./slick.min.js"></script>
+<script src="slick.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
-<script src="./slick.js"></script>
+<script src="slick.js"></script>
 </html>
